// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`audit queries > queryAccountInfo — matches snapshot 1`] = `
"
      SELECT
        customer.id, customer.descriptive_name, customer.currency_code,
        customer.time_zone, customer.auto_tagging_enabled,
        customer.tracking_url_template
      FROM customer LIMIT 1
    "
`;

exports[`audit queries > queryAdGroupAssets — matches snapshot 1`] = `
"
      SELECT
        campaign.id, campaign.name, campaign.status,
        ad_group.id, ad_group.name, ad_group.status,
        ad_group_asset.field_type
      FROM ad_group_asset
      WHERE campaign.status = 'ENABLED'
        AND ad_group.status != 'REMOVED'
    "
`;

exports[`audit queries > queryAdGroups — LIMIT 1000 1`] = `
"
      SELECT
        campaign.id, campaign.status,
        ad_group.id, ad_group.name, ad_group.status,
        metrics.impressions, metrics.clicks, metrics.cost_micros,
        metrics.conversions
      FROM ad_group
      WHERE campaign.status = 'ENABLED'
        AND ad_group.status != 'REMOVED'
      ORDER BY metrics.cost_micros DESC
      LIMIT 1000
    "
`;

exports[`audit queries > queryAds — date range + LIMIT 1000 1`] = `
"
      SELECT
        campaign.id, campaign.status,
        ad_group.name,
        ad_group_ad.ad.final_urls,
        ad_group_ad.ad.responsive_search_ad.headlines,
        ad_group_ad.ad.responsive_search_ad.descriptions,
        ad_group_ad.ad_strength, ad_group_ad.status,
        metrics.impressions, metrics.clicks, metrics.cost_micros,
        metrics.conversions
      FROM ad_group_ad
      WHERE campaign.status = 'ENABLED'
        AND ad_group_ad.status != 'REMOVED'
        AND segments.date BETWEEN '2026-01-01' AND '2026-01-30'
      ORDER BY metrics.cost_micros DESC
      LIMIT 1000
    "
`;

exports[`audit queries > queryAudienceSegmentCheck — LIMIT 1 (existence check only) 1`] = `
"
      SELECT campaign.id, campaign.status, ad_group.id, ad_group_criterion.type
      FROM ad_group_criterion
      WHERE campaign.status = 'ENABLED'
        AND ad_group_criterion.type IN ('USER_LIST', 'CUSTOM_AUDIENCE', 'COMBINED_AUDIENCE')
      LIMIT 1
    "
`;

exports[`audit queries > queryBillingSetups — avoids non-portable payment-account info fields 1`] = `
"
      SELECT
        billing_setup.id,
        billing_setup.status,
        billing_setup.payments_account
      FROM billing_setup
      LIMIT 100
    "
`;

exports[`audit queries > queryCampaignAssets — matches snapshot 1`] = `
"
      SELECT
        campaign.id, campaign.name, campaign.status,
        campaign_asset.field_type
      FROM campaign_asset
      WHERE campaign.status = 'ENABLED'
    "
`;

exports[`audit queries > queryCampaigns — substitutes date range 1`] = `
"
      SELECT
        campaign.id, campaign.name, campaign.status,
        campaign.advertising_channel_type, campaign.bidding_strategy_type,
        campaign.target_cpa.target_cpa_micros,
        campaign.network_settings.target_search_network,
        campaign.network_settings.target_content_network,
        campaign.geo_target_type_setting.positive_geo_target_type,
        campaign_budget.amount_micros,
        metrics.impressions, metrics.clicks, metrics.cost_micros,
        metrics.conversions, metrics.conversions_value, metrics.all_conversions,
        metrics.search_impression_share,
        metrics.search_budget_lost_impression_share,
        metrics.search_rank_lost_impression_share
      FROM campaign
      WHERE campaign.status != 'REMOVED'
        AND segments.date BETWEEN '2026-01-01' AND '2026-01-30'
      ORDER BY metrics.cost_micros DESC
    "
`;

exports[`audit queries > queryChangeEvents — uses >= / <= (BETWEEN not supported), ORDER BY DESC, LIMIT 500 1`] = `
"
      SELECT
        change_event.change_date_time,
        change_event.change_resource_type,
        change_event.resource_name,
        change_event.client_type,
        change_event.user_email,
        change_event.changed_fields,
        change_event.resource_change_operation,
        change_event.campaign,
        change_event.ad_group
      FROM change_event
      WHERE change_event.change_date_time >= '2099-01-01 00:00:00'
        AND change_event.change_date_time <= '2099-01-30 23:59:59'
      ORDER BY change_event.change_date_time DESC
      LIMIT 500
    "
`;

exports[`audit queries > queryConversionActionPerformance — safe conversion segment metrics only 1`] = `
"
      SELECT
        campaign.id, campaign.name, campaign.status,
        segments.conversion_action_name,
        metrics.conversions, metrics.conversions_value,
        metrics.all_conversions, metrics.all_conversions_value
      FROM campaign
      WHERE campaign.status != 'REMOVED'
        AND segments.date BETWEEN '2026-01-01' AND '2026-01-30'
      ORDER BY metrics.conversions DESC
      LIMIT 500
    "
`;

exports[`audit queries > queryConversionActions — ORDER BY name 1`] = `
"
      SELECT
        conversion_action.id, conversion_action.name,
        conversion_action.category, conversion_action.type,
        conversion_action.status, conversion_action.counting_type,
        conversion_action.include_in_conversions_metric,
        conversion_action.primary_for_goal,
        conversion_action.owner_customer,
        conversion_action.value_settings.default_value
      FROM conversion_action
      WHERE conversion_action.status != 'REMOVED'
      ORDER BY conversion_action.name ASC
    "
`;

exports[`audit queries > queryConvertingSearchTerms — LIMIT 500, conversions > 0 1`] = `
"
      SELECT
        campaign.id, campaign.name, campaign.status,
        ad_group.id, ad_group.name,
        search_term_view.search_term,
        metrics.conversions, metrics.cost_micros, metrics.clicks
      FROM search_term_view
      WHERE segments.date BETWEEN '2026-01-01' AND '2026-01-30'
        AND campaign.status = 'ENABLED'
        AND ad_group.status = 'ENABLED'
        AND metrics.conversions > 0
      ORDER BY metrics.conversions DESC
      LIMIT 500
    "
`;

exports[`audit queries > queryCustomerManagerLinks — exposes manager access 1`] = `
"
      SELECT
        customer_manager_link.manager_customer,
        customer_manager_link.manager_link_id,
        customer_manager_link.status
      FROM customer_manager_link
      WHERE customer_manager_link.status IN ('ACTIVE', 'PENDING')
      LIMIT 100
    "
`;

exports[`audit queries > queryDailyCampaignMetrics — date range 1`] = `
"
      SELECT
        campaign.id, segments.date,
        metrics.cost_micros, metrics.clicks, metrics.conversions
      FROM campaign
      WHERE campaign.status != 'REMOVED'
        AND segments.date BETWEEN '2026-01-01' AND '2026-01-30'
    "
`;

exports[`audit queries > queryDevicePerformance — date range 1`] = `
"
      SELECT
        campaign.id, campaign.status, segments.device,
        metrics.impressions, metrics.clicks, metrics.cost_micros,
        metrics.conversions, metrics.conversions_value
      FROM campaign
      WHERE campaign.status = 'ENABLED'
        AND segments.date BETWEEN '2026-01-01' AND '2026-01-30'
      ORDER BY metrics.cost_micros DESC
    "
`;

exports[`audit queries > queryGeoTargeting — matches snapshot 1`] = `
"
      SELECT
        campaign.id, campaign.name, campaign.status,
        campaign_criterion.type, campaign_criterion.negative,
        campaign_criterion.location.geo_target_constant,
        campaign_criterion.proximity.radius,
        campaign_criterion.proximity.radius_units
      FROM campaign_criterion
      WHERE campaign.status = 'ENABLED'
        AND campaign_criterion.type IN ('LOCATION', 'PROXIMITY')
    "
`;

exports[`audit queries > queryKeywords — date range + LIMIT 2000 1`] = `
"
      SELECT
        campaign.id, campaign.name, campaign.status,
        ad_group.id, ad_group.name,
        ad_group_criterion.criterion_id,
        ad_group_criterion.keyword.text,
        ad_group_criterion.keyword.match_type,
        ad_group_criterion.status,
        ad_group_criterion.negative,
        metrics.impressions, metrics.clicks, metrics.ctr,
        metrics.cost_micros, metrics.average_cpc, metrics.conversions
      FROM keyword_view
      WHERE segments.date BETWEEN '2026-01-01' AND '2026-01-30'
        AND campaign.status = 'ENABLED'
        AND ad_group.status = 'ENABLED'
        AND ad_group_criterion.status = 'ENABLED'
        AND ad_group_criterion.negative = FALSE
      ORDER BY metrics.cost_micros DESC
      LIMIT 2000
    "
`;

exports[`audit queries > queryLandingPages — LIMIT 200 1`] = `
"
      SELECT
        campaign.status,
        landing_page_view.unexpanded_final_url,
        metrics.impressions, metrics.clicks, metrics.cost_micros,
        metrics.conversions
      FROM landing_page_view
      WHERE segments.date BETWEEN '2026-01-01' AND '2026-01-30'
        AND campaign.status = 'ENABLED'
      ORDER BY metrics.cost_micros DESC
      LIMIT 200
    "
`;

exports[`audit queries > queryNegativeKeywords — filters to negative = TRUE 1`] = `
"
      SELECT
        campaign.id, campaign.name, campaign.status,
        campaign_criterion.keyword.text,
        campaign_criterion.keyword.match_type
      FROM campaign_criterion
      WHERE campaign.status = 'ENABLED'
        AND campaign_criterion.type = 'KEYWORD'
        AND campaign_criterion.negative = TRUE
    "
`;

exports[`audit queries > queryNetworkSegmentation — date range 1`] = `
"
      SELECT
        campaign.id, campaign.status, segments.ad_network_type,
        metrics.impressions, metrics.clicks, metrics.cost_micros,
        metrics.conversions
      FROM campaign
      WHERE campaign.status = 'ENABLED'
        AND segments.date BETWEEN '2026-01-01' AND '2026-01-30'
    "
`;

exports[`audit queries > queryPausedCampaigns — exposes paused campaigns 1`] = `
"
      SELECT
        campaign.id, campaign.name, campaign.status,
        campaign.advertising_channel_type, campaign.bidding_strategy_type,
        campaign_budget.amount_micros
      FROM campaign
      WHERE campaign.status = 'PAUSED'
      ORDER BY campaign.name ASC
      LIMIT 500
    "
`;

exports[`audit queries > queryQualityScores — matches snapshot 1`] = `
"
      SELECT
        campaign.status,
        ad_group_criterion.criterion_id,
        ad_group_criterion.quality_info.quality_score,
        ad_group_criterion.quality_info.creative_quality_score,
        ad_group_criterion.quality_info.post_click_quality_score,
        ad_group_criterion.quality_info.search_predicted_ctr
      FROM ad_group_criterion
      WHERE campaign.status = 'ENABLED'
        AND ad_group_criterion.type = 'KEYWORD'
        AND ad_group_criterion.status != 'REMOVED'
    "
`;

exports[`audit queries > queryRecommendations — conservative recommendation overview 1`] = `
"
      SELECT
        recommendation.resource_name,
        recommendation.type,
        recommendation.dismissed,
        recommendation.campaign
      FROM recommendation
      WHERE recommendation.dismissed = FALSE
      LIMIT 1000
    "
`;

exports[`audit queries > querySearchTerms — date range + LIMIT 2000 1`] = `
"
      SELECT
        campaign.id, campaign.name, campaign.status,
        ad_group.id, ad_group.name,
        search_term_view.search_term, search_term_view.status,
        metrics.impressions, metrics.clicks, metrics.cost_micros,
        metrics.conversions
      FROM search_term_view
      WHERE segments.date BETWEEN '2026-01-01' AND '2026-01-30'
        AND campaign.status = 'ENABLED'
        AND ad_group.status = 'ENABLED'
      ORDER BY metrics.cost_micros DESC
      LIMIT 2000
    "
`;

exports[`audit queries > querySharedNegativeKeywordLists — filters shared negative lists 1`] = `
"
      SELECT
        shared_set.id, shared_set.name, shared_set.type,
        shared_set.member_count, shared_set.status
      FROM shared_set
      WHERE shared_set.type = 'NEGATIVE_KEYWORDS'
        AND shared_set.status != 'REMOVED'
      ORDER BY shared_set.name ASC
    "
`;

exports[`audit queries > querySharedNegativeKeywordMembers — reads shared negative keywords 1`] = `
"
      SELECT
        shared_set.id, shared_set.name, shared_set.status,
        shared_criterion.keyword.text,
        shared_criterion.keyword.match_type
      FROM shared_criterion
      WHERE shared_set.type = 'NEGATIVE_KEYWORDS'
        AND shared_set.status != 'REMOVED'
    "
`;

exports[`audit queries > queryZeroConversionKeywords — LIMIT 500, conversions = 0 1`] = `
"
      SELECT
        campaign.id, campaign.name, campaign.status,
        ad_group.id, ad_group.name,
        ad_group_criterion.keyword.text,
        ad_group_criterion.keyword.match_type,
        ad_group_criterion.criterion_id,
        ad_group_criterion.negative,
        metrics.clicks, metrics.cost_micros
      FROM keyword_view
      WHERE segments.date BETWEEN '2026-01-01' AND '2026-01-30'
        AND campaign.status = 'ENABLED'
        AND ad_group.status = 'ENABLED'
        AND ad_group_criterion.status = 'ENABLED'
        AND ad_group_criterion.negative = FALSE
        AND metrics.conversions = 0
      ORDER BY metrics.cost_micros DESC
      LIMIT 500
    "
`;
